fixed 'There is a one pixel gap between bottom of rollover and red bar in all browsers' from 11/22 email - homepage rollovers section

--- a/css/altres.css
+++ b/css/altres.css
@@ -271,11 +271,11 @@ body.front #feature #feature-homepage {
  
 #staffing {
 	position: relative;
-	height: 103px;
+	height: 102px;
 	background-image: url(../images/staffing/staffing-bg.png);
 	background-repeat: repeat-x;
 	z-index: 3;
-	top: 72px;
+	top: 73px;
 	padding-top: 18px;
 }
 
